--- a/WebContent/webapp/template/common/commonHeader.xhtml
+++ b/WebContent/webapp/template/common/commonHeader.xhtml
@@ -19,7 +19,8 @@
 				<p:menuitem value="Login" url="login.jsf" />
 				<p:submenu label="Employee's" icon="ui-icon-document" rendered="#{loginController.loggedIn}">
 					 <p:menuitem value="Customers" url="customer.jsf" />
-					 <p:menuitem value="Videos" url="videosAdmin.jsf" />					
+					 <p:menuitem value="Videos" url="videosAdmin.jsf" />
+					 <p:menuitem value="Manage Rentals" url="checkInCheckOut.jsf" />					
 				</p:submenu>
 				
 				
